# skillbox

./: .gitignore  README.md
STL/algorithm/: CMakeLists.txt  cProgram.c  data.txt  main.cpp
STL/algorithm/task_01/: README
STL/algorithm/task_01/header/: task1.h  task2.h  task3.h
STL/algorithm/task_01/src/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
STL/algorithm/task_02/: README
STL/algorithm/task_02/header/: task1.h  task2.h  task3.h
STL/algorithm/task_02/src/: task1.cpp  task2.cpp  task3.cpp
STL/algorithm/task_03/: README
STL/algorithm/task_03/header/: task1.h  task2.h  task3.h
STL/algorithm/task_03/src/: task1.cpp  task2.cpp  task3.cpp
STL/algorithm/task_04/: README
STL/algorithm/task_04/header/: task1.h  task2.h  task3.h
STL/algorithm/task_04/src/: task1.cpp  task2.cpp  task3.cpp
STL/algorithm/task_05/: README
STL/algorithm/task_05/header/: task1.h  task2.h  task3.h
STL/algorithm/task_05/src/: task1.cpp  task2.cpp
STL/algorithm/task_06/: README
STL/algorithm/task_06/header/: task1.h  task2.h
STL/algorithm/task_06/src/: task1.cpp  task2.cpp  task3.cpp
STL/std_deque/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_20/skilbox_20_task_5_4/: skilbox_20_task4.sln
SkillBox/c++/skillbox_20/skilbox_20_task_5_4/skilbox_20_task4/: skilbox_20_task4.vcxproj
SkillBox/c++/skillbox_26/task2/: CMakeLists.txt
SkillBox/c++/skillbox_26/task2/header/: kbd.h  mobile.h
SkillBox/c++/skillbox_26/task2/src/: CMakeLists.txt  kbd.cpp  main.cpp  mobile.cpp
SkillBox/c++/skillbox_26/task3/: CMakeLists.txt
SkillBox/c++/skillbox_26/task3/header/: MyMonitor.h  kbd.h
SkillBox/c++/skillbox_26/task3/src/: CMakeLists.txt  MyMonitor.cpp  kbd.cpp  main.cpp
SkillBox/c++/skillbox_27/task1/: CMakeLists.txt
SkillBox/c++/skillbox_27/task1/header/: Root.h  Tree.h  Village.h  kbd.h
SkillBox/c++/skillbox_27/task1/src/: CMakeLists.txt  Root.cpp  Tree.cpp  Village.cpp  kbd.cpp  main.cpp
SkillBox/c++/skillbox_27/task2/: CMakeLists.txt
SkillBox/c++/skillbox_27/task2/header/: Circle.h  Core.h  Display.h  Rectangle.h  Square.h  Triangle.h  kbd.h
SkillBox/c++/skillbox_27/task2/src/: CMakeLists.txt  Circle.cpp  Core.cpp  Display.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp  kbd.cpp  main.cpp
SkillBox/c++/skillbox_27/task3/: CMakeLists.txt
SkillBox/c++/skillbox_27/task3/header/: Head.h  People.h  Team.h  Worker.h  kbd.h  taskType.h
SkillBox/c++/skillbox_27/task3/src/: CMakeLists.txt  Head.cpp  People.cpp  Team.cpp  Worker.cpp  kbd.cpp  taskType.cpp
SkillBox/c++/skillbox_27/task3_v2/: CMakeLists.txt
SkillBox/c++/skillbox_27/task3_v2/header/: BigBranch.h  Branch.h  Tree.h  kbd.h
SkillBox/c++/skillbox_27/task3_v2/src/: BigBranch.cpp  Branch.cpp  CMakeLists.txt  Tree.cpp  kbd.cpp  main.cpp
SkillBox/c++/skillbox_28/task1/: CMakeLists.txt
SkillBox/c++/skillbox_28/task1/src/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_28/task2/: CMakeLists.txt
SkillBox/c++/skillbox_28/task2/header/: Train.h  kbd.h
SkillBox/c++/skillbox_28/task2/src/: CMakeLists.txt  Train.cpp  kbd.cpp  main.cpp
SkillBox/c++/skillbox_28/task3/: CMakeLists.txt
SkillBox/c++/skillbox_28/task3/header/: func.h  kbd.h  menu.h
SkillBox/c++/skillbox_28/task3/src/: CMakeLists.txt  func.cpp  kbd.cpp  menu.cpp
SkillBox/c++/skillbox_29/: main.cpp
SkillBox/c++/skillbox_29/task1/: CMakeLists.txt
SkillBox/c++/skillbox_30/task1/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_30/task2/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_30/task3/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_30/untitled/: README  main.cpp
SkillBox/c++/skillbox_31/task1/: CMakeLists.txt
SkillBox/c++/skillbox_31/task1/src/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_31/task2/header/: Listgraph.h  Matrixgraph.h  igraph.h
SkillBox/c++/skillbox_31/task2/src/: CMakeLists.txt  Listgraph.cpp  (+1 more)
SkillBox/c++/skillbox_32/task1_1/: CMakeLists.txt  input.json  main.cpp  readme  titanic.json
SkillBox/c++/skillbox_32/task2/: CMakeLists.txt
SkillBox/c++/skillbox_32/task2/header/: findActor.h  kbd.h  menu.h  readFile.h  showJson.h
SkillBox/c++/skillbox_32/task2/src/: CMakeLists.txt  findActor.cpp  kbd.cpp  main.cpp  menu.cpp  readFile.cpp  showJson.cpp
SkillBox/c++/skillbox_32/task3_protoc/: CMakeLists.txt  record.pb.cc  record.pb.h  record.proto
SkillBox/c++/skillbox_33/task1_onlain_shop/: CMakeLists.txt  README  main.cpp
SkillBox/c++/skillbox_33/task2_fish/: CMakeLists.txt  README
SkillBox/c++/skillbox_33/task3_regestr/: CMakeLists.txt  README
SkillBox/c++/skillbox_33/task3_regestr/src/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_33/task4_midle_array/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_34/: CMakeLists.txt
SkillBox/c++/skillbox_35/task1_range/: CMakeLists.txt  README  main.cpp
SkillBox/c++/skillbox_35/task2_unorderedSet/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_35/task3_fileSystem/: CMakeLists.txt  README  main.cpp
SkillBox/c++/skillbox_36/: CMakeLists.txt
SkillBox/c++/skillbox_36/header/: circle.h
SkillBox/c++/skillbox_36/src/: circle.cpp  main.cpp
SkillBox/c++/skillbox_37/: README
SkillBox/c++/skillbox_37/task1_calculator/: CMakeLists.txt  calcUI.ui  calc_mainWindow.cpp  calc_mainWindow.h  main.cpp
SkillBox/c++/skillbox_37/task3_remote_controle/: CMakeLists.txt  TvControllerWindow.cpp  TvControllerWindow.h  main.cpp  tv_controller.ui
SkillBox/c++/skillbox_37/untitled/: main.cpp
SkillBox/c++/skillbox_37/untitled1/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_38/: README
SkillBox/c++/skillbox_38/task1_button/: CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_38/task2_html_viewer/: CMakeLists.txt  QMainWindow.h  main.cpp
SkillBox/c++/skillbox_38/task3_blurEffect/: BlurEffect.h  CMakeLists.txt  main.cpp
SkillBox/c++/skillbox_39/task1_appAnimating/: CMakeLists.txt  README  main.cpp  main.qml
SkillBox/c++/skillbox_39/task2_formatingNumber/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  mainWindow.ui
SkillBox/c++/skillvox_36_console/: CMakeLists.txt
SkillBox/java/module_04/: README  maxandminvalue.java  trangle.java
(+16 files in other folders)
