cmake_minimum_required(VERSION 3.21)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

#set(TASK1_HEADER ${CMAKE_SOURCE_DIR}/task_01/header/)
#add_subdirectory(task_01/src)
add_executable(algorithm main.cpp)

#add_compile_options(
#        -Werror
#
#        -Wall
#        -Wextra
#        -Wpedantic
#
#        -Wcast-align
#        -Wcast-qual
#        -Wconversion
#        -Wctor-dtor-privacy
#        -Wenum-compare
#        -Wfloat-equal
#        -Wnon-virtual-dtor
#        -Wold-style-cast
#        -Woverloaded-virtual
#        -Wredundant-decls
#        -Wsign-conversion
#        -Wsign-promo
#)
#
