cmake_minimum_required(VERSION 3.20)
project("http html" VERSION 1.0)


set(CMAKE_CXX_STANDARD 20)

set (BUILD_CPR_TESTS OFF)
set (CMAKE_USE_OPENSSL OFF)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
#include(FetchContent)
#FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/libcpr/cpr.git GIT_TAG f4622efcb59d84071ae11404ae61bd821c1c344b) # the commit hash for 1.6.2
#FetchContent_MakeAvailable(cpr)
include(FetchContent)
FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/whoshuu/cpr.git GIT_TAG c8d33915dbd88ad6c92b258869b03aba06587ff9) # the commit hash for 1.5.0
FetchContent_MakeAvailable(cpr)

add_executable(task2
        main.cpp)
target_link_libraries(task2
        PRIVATE
        cpr::cpr)






